--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -541,20 +541,6 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  .menu {
-    flex-direction: column;
-    text-align: center;
-    visibility: hidden;
-    overflow: hidden;
-    position: fixed;
-    background-color: #fff;
-    opacity: 0;
-    transition: opacity $TransitionDuration, visibility $TransitionDuration;
-    &__link {
-      text-transform: uppercase;
-      margin: 20px 0;
-    }
-  }
   .hamburg-menu {
     position: fixed;
     top: 50px;
@@ -582,27 +568,21 @@ body {
       transition: transform $TransitionDuration;
       background: $GreenLight;
       border: none;
-      :hover:after {
+      &:before,
+      &:after {
+        content: '';
         width: 100%;
+        height: 6px;
+        position: absolute;
+        top: 24px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        transition: top $TransitionDuration, transform $TransitionDuration;
+        background-color: $GreenLight;
+      }
+      &:before {
+        top: 8px;
       }
     }
-  }
-
-  .hamburg-menu__burger-nav:before,
-  .hamburg-menu__burger-nav:after {
-    content: '';
-    width: 100%;
-    height: 6px;
-    position: absolute;
-    top: 24px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: top $TransitionDuration, transform $TransitionDuration;
-    background-color: $GreenLight;
-  }
-
-  .hamburg-menu__burger-nav:before {
-    top: 8px;
-    background-color: $GreenLight;
   }
 
   .hamburg-menu.hamburg-menu--active .hamburg-menu__burger-nav {
@@ -613,22 +593,37 @@ body {
       top: 17px;
       transform: rotate(45deg);
     }
+    &:after {
+      top: 17px;
+      transform: rotate(135deg);
+    }
   }
-  .hamburg-menu.hamburg-menu--active .hamburg-menu__burger-nav:after {
-    top: 17px;
-    transform: rotate(135deg);
+
+  .menu {
+    flex-direction: column;
+    text-align: center;
+    visibility: hidden;
+    overflow: hidden;
+    position: fixed;
+    background-color: #fff;
+    opacity: 0;
+    transition: opacity $TransitionDuration, visibility $TransitionDuration;
+    &__link {
+      text-transform: uppercase;
+      margin: 20px 0;
+      &:after {
+        display: block;
+        content: "";
+        height: 2px;
+        width: 0;
+        background-color: $GreenLight;
+        transition: width $TransitionDuration;
+      }
+    }
   }
 
   .menu .menu__link:hover:after {
     width: 100%;
-  }
-  .menu .menu__link:after {
-    display: block;
-    content: "";
-    height: 2px;
-    width: 0;
-    background-color: $GreenLight;
-    transition: width $TransitionDuration;
   }
 
   .menu.menu--open {
@@ -673,7 +668,7 @@ body {
     &__items {
       flex-direction: column;
       .image-container {
-        background: no-repeat center / cover;
+
         padding: 40px 0;
       }
       .image-container, .generation-info__item {
