--- a/app/style/style.css
+++ b/app/style/style.css
@@ -27,10 +27,10 @@ body {
   .menu__i-logo {
     width: 94px;
     transition: opacity 0.3s; }
-  .menu__i-logo:hover, .menu__i-logo:focus {
-    opacity: 0.7; }
-  .menu__i-logo:active {
-    opacity: 0.6; }
+    .menu__i-logo:hover, .menu__i-logo:focus {
+      opacity: 0.7; }
+    .menu__i-logo:active {
+      opacity: 0.6; }
   .menu__link {
     color: #4d4959;
     letter-spacing: 3px;
@@ -451,16 +451,12 @@ body {
         width: 0;
         background-color: #64c29e;
         transition: width 0.3s; }
-  .menu .menu__link:hover:after {
-    width: 100%; }
+      .menu__link:hover:after {
+        width: 100%; }
   .menu.menu--open {
-    width: 100%;
     visibility: visible;
-    left: 0;
-    top: 0;
     opacity: 1;
-    z-index: 1;
-    transition: opacity 0.3s; }
+    z-index: 1; }
   .contact-with-us__container {
     flex-direction: column; }
   .contact-with-us__btn {
@@ -516,6 +512,20 @@ body {
       font-size: 20px; }
   .contact-with-us__input {
     width: 260px; }
+  .gallery .gallery__items:first-child .gallery__item:nth-child(1) {
+    width: 100%; }
+  .gallery .gallery__items:first-child .gallery__item:nth-child(2) {
+    width: 100%; }
+  .gallery .gallery__items:nth-child(2) {
+    flex-direction: column; }
+    .gallery .gallery__items:nth-child(2) .gallery__item:first-child {
+      width: 100%; }
+    .gallery .gallery__items:nth-child(2) .gallery__item:last-child {
+      width: 100%; }
+  .gallery .gallery__items:last-child .gallery__item:nth-child(2) {
+    width: 100%; }
+  .gallery .gallery__items:last-child .gallery__item:nth-child(3) {
+    width: 100%; }
   .footer {
     padding: 50px; } }
 
@@ -526,8 +536,6 @@ body {
       text-align: justify; }
   .generation-info__items .generation-info__item .generation-info__item-info {
     padding: 50px 25px; }
-  .gallery__items .gallery__item {
-    flex-direction: column; }
   .contact-with-us {
     padding: 60px 0; }
   .contact .contact-info {
