--- a/app/style/style.css
+++ b/app/style/style.css
@@ -43,7 +43,7 @@ body {
     .menu__link:active {
       opacity: 0.6; }
 
-.sticky {
+.menu--fixed {
   position: fixed;
   top: 0;
   width: 100%;
