--- a/app/style/style.css
+++ b/app/style/style.css
@@ -200,7 +200,7 @@ body {
       align-items: center;
       text-decoration: none;
       text-transform: uppercase;
-      color: #fff;
+      color: white;
       font-size: 18px;
       font-weight: bold;
       min-height: 267px;
@@ -261,7 +261,7 @@ body {
     margin: 0 auto;
     font-size: 14px;
     letter-spacing: 3px;
-    background: #282f35;
+    background: transparent;
     border: 1px solid white;
     color: white;
     padding: 16px 50px;
@@ -303,7 +303,7 @@ body {
     background: #64c29e;
     border: none;
     line-height: 24px;
-    color: #fff;
+    color: white;
     cursor: pointer;
     transition: background-color 0.3s; }
     .contact-with-us__btn:hover, .contact-with-us__btn:focus {
@@ -438,7 +438,7 @@ body {
     visibility: hidden;
     overflow: hidden;
     position: fixed;
-    background-color: #fff;
+    background-color: white;
     opacity: 0;
     transition: opacity 0.3s, visibility 0.3s; }
     .menu__link {
