--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&subset=latin-ext');
 
 $Lato: 'Lato', sans-serif;
-$mainColor: #848789;
-$titleColor: #353738;
-$greenLight: #64c29e;
+$mainColor: rgb(132,135,137);
+$titleColor: rgb(53,55,56);
+$greenLight: rgb(100,194,158);
 $transitionDuration: .3s;
 $hoverFocusOpacity: .7;
 $activeOpacity: .6;
-$whiteColor: #fff;
+$whiteColor: rgb(255,255,255);
 html, body {
   margin: 0;
   padding: 0;
@@ -50,7 +50,7 @@ body {
     }
   }
   &__link {
-    color: #4d4959;
+    color: rgb(77,73,89);
     letter-spacing: 3px;
     margin: 0 40px;
     text-decoration: none;
@@ -70,7 +70,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: white;
+  background-color: $whiteColor;
   z-index: 2;
 }
 
@@ -175,7 +175,7 @@ body {
         content: '';
         width: 50px;
         height: 3px;
-        background-color: #d7d7d7;
+        background-color: rgb(215,215,215);
         display: block;
         margin: 40px auto 0;
       }
@@ -233,10 +233,10 @@ body {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    border: 1px solid #a9afb3;
+    border: 1px solid rgb(169,175,179);
   }
   .carousel-indicators .active {
-    background-color: #a9afb3;
+    background-color: rgb(169,175,179);
   }
   .contact__info {
     margin: 0 auto;
@@ -357,13 +357,13 @@ body {
 
 .discover {
   padding: 70px 0;
-  background: #282f35;
+  background: rgb(40,47,53);
   &__button {
     display: block;
     margin: 0 auto;
     font-size: 14px;
     letter-spacing: 3px;
-    background: #282f35;
+    background: transparent;
     border: 1px solid white;
     color: white;
     padding: 16px 50px;
@@ -405,8 +405,8 @@ body {
     padding: 25px;
     width: 355px;
     font-size: 15px;
-    color: #c8c8c8;
-    border: 2px solid #d3d7d9;
+    color: rgb(200,200,200);
+    border: 2px solid rgb(211,215,217);
     &:focus {
       border: 2px solid $greenLight;
     }
@@ -421,7 +421,7 @@ body {
     transition: background-color $transitionDuration;
     &:hover,
     &:focus {
-      background-color: #ff5654;
+      background-color: rgb(255,86,84);
     }
     &:active {
       opacity: $activeOpacity;
