--- a/app/style/style.css
+++ b/app/style/style.css
@@ -65,8 +65,7 @@ body {
     font-size: 18px; }
   .info__text {
     color: #848789;
-    line-height: 34px;
-    margin: 0; }
+    line-height: 34px; }
 
 .new-generation {
   padding: 117px 230px;
