--- a/app/style/style.css
+++ b/app/style/style.css
@@ -170,7 +170,7 @@ body {
     display: flex; }
   .contact .contact__title {
     max-width: 1040px;
-    margin: 33px 0 11px 0;
+    margin: 33px auto 11px;
     text-transform: none;
     letter-spacing: 2px; }
   .contact .contact__time {
@@ -312,7 +312,7 @@ body {
   font-weight: bold; }
 
 .address__link {
-  max-width: max-content;
+  max-width: 100%;
   display: block;
   text-decoration: none;
   color: #848789;
@@ -459,8 +459,6 @@ body {
       padding: 40px 0; }
     .generation-info__items .image-container, .generation-info__items .generation-info__item {
       width: 100%; }
-    .generation-info__items .generation-info__item .generation-info__item-text {
-      padding: 0 0 45px 0; }
   .generation-info__items:last-child {
     flex-direction: column; }
     .generation-info__items:last-child .image-container {
