--- a/app/style/style.css
+++ b/app/style/style.css
@@ -7,6 +7,9 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 16px; }
 
+i {
+  font-style: italic; }
+
 .slick-dots {
   bottom: 0; }
 
@@ -479,11 +482,9 @@ body {
   .generation-info__items:last-child .image-container {
     padding: 80px 0; }
   .contact {
-    padding: 10px; }
+    padding: 20px; }
     .contact .contact-info {
       padding: 127px 10px; }
-    .contact .contact__logo {
-      margin-top: 20px; }
     .contact .contact__text {
       font-size: 20px; }
   .contact-with-us__input {
