--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -8,18 +8,16 @@ $transitionDuration: .3s;
 $hoverFocusOpacity: .7;
 $activeOpacity: .6;
 $whiteColor: #fff;
-html, body {
-  margin: 0;
-  padding: 0;
-}
 
 body {
   font-family: $Lato;
   font-size: 16px;
 }
-i{
+
+i {
   font-style: italic;
 }
+
 .slick-dots {
   bottom: 0;
 }
@@ -39,6 +37,7 @@ i{
   font-weight: bold;
   font-size: 13px;
   z-index: 1;
+  box-sizing: border-box;
   &__i-logo {
     width: 94px;
     transition: opacity $transitionDuration;
@@ -110,8 +109,48 @@ i{
 }
 
 .generation-info {
+  &__item {
+    width: 33.1%;
+  }
+  &__item-info {
+    padding: 64px 65px 60px 61px;
+    position: relative;
+
+    &:after {
+      content: '';
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: -39px;
+      border: 20px solid transparent;
+      border-top: 20px solid white;
+    }
+  }
+  &__item-title {
+    margin: 23px auto 11px;
+  }
+  &__item-text {
+    text-align: justify;
+    line-height: 30px;
+    &:after {
+      content: '';
+      width: 50px;
+      height: 3px;
+      background-color: #d7d7d7;
+      display: block;
+      margin: 40px auto 0;
+    }
+  }
   &__items {
     display: flex;
+    .image-container {
+      min-height: 200px;
+      width: 66.9%;
+      background: center no-repeat / cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
     &:last-child {
       .image-container {
         width: calc(100% / 3);
@@ -138,78 +177,38 @@ i{
         }
       }
     }
-    .image-container {
-      min-height: 200px;
-      width: 66.9%;
-      background: center no-repeat / cover;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-    }
-    .generation-info__item {
-      width: 33.1%;
-    }
-    .generation-info__item-info {
-      padding: 64px 65px 60px 61px;
-      position: relative;
-
-      &:after {
-        content: '';
-        position: absolute;
-        left: auto;
-        bottom: -39px;
-        border: 20px solid transparent;
-        border-top: 20px solid white;
-      }
-    }
-    .generation-info__item-title {
-      margin: 23px 0 11px 0;
-    }
-    .generation-info__item-text {
-      text-align: justify;
-      line-height: 30px;
-      &:after {
-        content: '';
-        width: 50px;
-        height: 3px;
-        background-color: #d7d7d7;
-        display: block;
-        margin: 40px auto 0;
-      }
-    }
-  }
-  &__items:first-child {
-    .image-container {
-      background-image: url('../images/BicycleCompany.jpg');
-      &__logo {
-        width: 113px;
-      }
-    }
-    .generation-info__item {
+    &:first-child {
       .image-container {
-        background-image: url('../images/Layer11.jpg');
-        width: 100%;
+        background-image: url('../images/BicycleCompany.jpg');
+        &__logo {
+          width: 113px;
+        }
       }
-      .generation-info__item-logo {
-        width: 41px;
+      .generation-info__item {
+        .image-container {
+          background-image: url('../images/Layer11.jpg');
+          width: 100%;
+        }
+        .generation-info__item-logo {
+          width: 41px;
+        }
       }
     }
-  }
-  &__items:nth-child(2) {
-    .image-container {
-      background-image: url('../images/Layer12.jpg');
-      &__logo {
-        width: 177px;
-      }
-    }
-    .generation-info__item {
-      .generation-info__item-logo {
-        width: 32px;
-      }
+    &:nth-child(2) {
       .image-container {
-        background-image: url('../images/Layer13.jpg');
-        width: 100%;
+        background-image: url('../images/Layer12.jpg');
+        &__logo {
+          width: 177px;
+        }
+      }
+      .generation-info__item {
+        .generation-info__item-logo {
+          width: 32px;
+        }
+        .image-container {
+          background-image: url('../images/Layer13.jpg');
+          width: 100%;
+        }
       }
     }
   }
@@ -217,11 +216,29 @@ i{
 
 .contact {
   padding: 100px 137px;
-  .contact__logo {
+  &__logo {
     width: 32px;
   }
+  .contact__info {
+    margin: 0 auto;
+    display: flex;
+  }
+  &__title {
+    max-width: 1040px;
+    margin: 33px auto 11px;
+    text-transform: none;
+    letter-spacing: 2px;
+  }
+  &__time {
+    color: $mainColor;
+  }
+  &__text {
+    max-width: 1040px;
+    font-size: 24px;
+    font-style: italic;
+  }
   .slick-list {
-    margin-bottom: 85px;
+    padding-bottom: 85px;
   }
   .slick-dots li button:before {
     font-size: 13px;
@@ -236,24 +253,6 @@ i{
   .carousel-indicators .active {
     background-color: #a9afb3;
   }
-  .contact__info {
-    margin: 0 auto;
-    display: flex;
-  }
-  .contact__title {
-    max-width: 1040px;
-    margin: 33px auto 11px ;
-    text-transform: none;
-    letter-spacing: 2px;
-  }
-  .contact__time {
-    color: $mainColor;
-  }
-  .contact__text {
-    max-width: 1040px;
-    font-size: 24px;
-    font-style: italic;
-  }
   .slick-dots {
     bottom: 65px;
     left: 0;
@@ -265,38 +264,37 @@ i{
   &__items {
     width: 100%;
     max-width: calc(100% / 3);
-    .gallery__item {
-      background: no-repeat center / cover;
+  }
+  &__item {
+    background: no-repeat center / cover;
+  }
+  &__item-link {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: $whiteColor;
+    font-size: 18px;
+    font-weight: bold;
+    min-height: 267px;
+    width: 100%;
+    opacity: 0;
+    cursor: pointer;
+    transition: opacity $transitionDuration;
+    background-color: rgba(100, 194, 158, 0.8);
+    &:hover,
+    &:focus {
+      opacity: 1;
     }
-    .gallery__item-link {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-decoration: none;
-      text-transform: uppercase;
-      color: $whiteColor;
-      font-size: 18px;
-      font-weight: bold;
-      min-height: 267px;
-      width: 100%;
-      opacity: 0;
-      cursor: pointer;
-      transition: opacity $transitionDuration;
-      background-color: rgba(100, 194, 158, 0.8);
-      &:hover,
-      &:focus {
-        opacity: 1;
-      }
-      &:active {
-        opacity: 0.9;
-      }
-      .gallery__item-img {
-        width: 51px;
-        margin-bottom: 13px;
-      }
+    &:active {
+      opacity: 0.9;
     }
-
+  }
+  &__item-img {
+    width: 51px;
+    margin-bottom: 13px;
   }
   .gallery__items:first-child {
     display: flex;
@@ -370,8 +368,8 @@ i{
     transition: background-color $transitionDuration, opacity $transitionDuration;
     &:hover,
     &:focus {
-      background-color: #64C29E;
-      border: 1px solid #64C29E;
+      background-color: $greenLight;
+      border: 1px solid $greenLight;
     }
     &:active {
       opacity: $activeOpacity;
@@ -416,7 +414,7 @@ i{
     line-height: 24px;
     color: $whiteColor;
     cursor: pointer;
-    transition: background-color $transitionDuration;
+    transition: background-color $transitionDuration, opacity $transitionDuration;
     &:hover,
     &:focus {
       background-color: #ff5654;
@@ -432,10 +430,9 @@ i{
     font-weight: bold;
   }
   &__link {
-    max-width: 100%;
-    display: block;
     text-decoration: none;
     color: $mainColor;
+    font-style: italic;
     transition: opacity $transitionDuration;
     &:hover,
     &:focus {
@@ -473,6 +470,27 @@ i{
   }
 }
 
+.social-icons {
+  display: flex;
+  &__link {
+    margin-right: 15px;
+    transition: opacity $transitionDuration;
+    &:last-child {
+      margin-right: 0;
+    }
+    &:hover,
+    &:focus {
+      opacity: $hoverFocusOpacity;
+    }
+    &:active {
+      opacity: $activeOpacity;
+    }
+  }
+  &__i-link {
+    width: 35px;
+  }
+}
+
 .footer {
   display: flex;
   justify-content: space-around;
@@ -486,26 +504,7 @@ i{
       margin: 0;
     }
   }
-  .social-icons {
-    display: flex;
-    &__link {
-      margin-right: 15px;
-      transition: opacity $transitionDuration;
-      &:last-child {
-        margin-right: 0;
-      }
-      &:hover,
-      &:focus {
-        opacity: $hoverFocusOpacity;
-      }
-      &:active {
-        opacity: $activeOpacity;
-      }
-    }
-    &__i-link {
-      width: 35px;
-    }
-  }
+
 }
 
 @media screen and (max-width: 1024px) {
@@ -513,11 +512,11 @@ i{
     padding: 132px 100px;
   }
   .generation-info {
+    &__item {
+      width: 50%;
+    }
     &__items {
       .image-container {
-        width: 50%;
-      }
-      .generation-info__item {
         width: 50%;
       }
       &:last-child {
@@ -556,25 +555,23 @@ i{
     &:active {
       opacity: $activeOpacity;
     }
-    &__burger-nav {
-      &:before,
-      &:after {
-        content: '';
-        width: 100%;
-        height: 6px;
-        position: absolute;
-        top: 24px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        transition: top $transitionDuration, transform $transitionDuration;
-        background-color: $greenLight;
-      }
-      &:before {
-        top: 8px;
-      }
+    &:before,
+    &:after {
+      content: '';
+      width: 100%;
+      height: 6px;
+      position: absolute;
+      top: 24px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      transition: top $transitionDuration, transform $transitionDuration;
+      background-color: $greenLight;
+    }
+    &:before {
+      top: 8px;
     }
   }
 
-  .hamburg-menu.hamburg-menu--active .hamburg-menu__burger-nav {
+  .hamburg-menu.hamburg-menu--active {
     &:before {
       top: 17px;
       transform: rotate(45deg);
@@ -592,6 +589,7 @@ i{
     opacity: 0;
     transition: opacity $transitionDuration, visibility $transitionDuration;
     z-index: 1;
+    padding: 35px 20px;
     &__link {
       margin: 20px 0;
       &:after {
@@ -644,15 +642,15 @@ i{
     padding: 117px 45px;
   }
   .generation-info {
+    .image-container, &__item {
+      width: 100%;
+    }
     &__items {
       flex-direction: column;
       .image-container {
-
         padding: 40px 0;
       }
-      .image-container, .generation-info__item {
-        width: 100%;
-      }
+
     }
     &__items:last-child {
       flex-direction: column;
@@ -673,10 +671,10 @@ i{
     padding: 100px;
     &__item {
       margin-bottom: 40px;
-      .author {
-        margin-bottom: 0;
-      }
     }
+  }
+  .author {
+    margin-bottom: 0;
   }
 }
 
@@ -693,7 +691,7 @@ i{
     .contact-info {
       padding: 127px 10px;
     }
-    .contact__text {
+    &__text {
       font-size: 20px;
     }
   }
@@ -742,19 +740,17 @@ i{
     }
   }
   .generation-info {
-    &__items {
-      .generation-info__item {
-        .generation-info__item-info {
-          padding: 50px 25px;
-        }
-      }
+    &__item-info {
+      padding: 50px 25px;
     }
   }
   .contact-with-us {
     padding: 60px 0;
   }
-  .contact .contact-info {
-    padding: 50px 10px;
+  .contact {
+    .contact-info {
+      padding: 50px 10px;
+    }
   }
 
   .footer {
@@ -767,6 +763,9 @@ i{
     &__input {
       width: 200px;
     }
+  }
+  .discover {
+    padding: 70px 40px;
   }
 }
 
