--- a/app/style/style.css
+++ b/app/style/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato&subset=latin-ext");
+.menu__i-logo, .menu__link, .gallery__item-link, .discover__button, .contact-with-us__btn, .address__link, .author__link, .social-icons__link {
+  transition: opacity 0.3s; }
+
 body {
   font-family: "Lato", sans-serif;
   font-size: 16px; }
@@ -25,8 +28,7 @@ i {
   z-index: 1;
   box-sizing: border-box; }
   .menu__i-logo {
-    width: 94px;
-    transition: opacity 0.3s; }
+    width: 94px; }
     .menu__i-logo:hover, .menu__i-logo:focus {
       opacity: 0.7; }
     .menu__i-logo:active {
@@ -37,12 +39,13 @@ i {
     margin: 0 40px;
     text-decoration: none;
     text-transform: uppercase;
-    transition: color 0.3s, opacity 0.3s; }
+    transition: color 0.3s; }
     .menu__link:hover, .menu__link:focus {
-      color: #64c29e;
       opacity: 0.7; }
     .menu__link:active {
       opacity: 0.6; }
+    .menu__link:hover, .menu__link:focus {
+      color: #64c29e; }
 
 .menu--fixed {
   background-color: white;
@@ -203,7 +206,6 @@ i {
     width: 100%;
     opacity: 0;
     cursor: pointer;
-    transition: opacity 0.3s;
     background-color: rgba(100, 194, 158, 0.8); }
     .gallery__item-link:hover, .gallery__item-link:focus {
       opacity: 1; }
@@ -263,12 +265,14 @@ i {
     padding: 16px 50px;
     text-transform: uppercase;
     cursor: pointer;
-    transition: background-color 0.3s, opacity 0.3s; }
+    transition: background-color 0.3s; }
+    .discover__button:hover, .discover__button:focus {
+      opacity: 0.7; }
+    .discover__button:active {
+      opacity: 0.6; }
     .discover__button:hover, .discover__button:focus {
       background-color: #64c29e;
       border: 1px solid #64c29e; }
-    .discover__button:active {
-      opacity: 0.6; }
 
 .contact-with-us {
   font-size: 24px;
@@ -301,11 +305,13 @@ i {
     line-height: 24px;
     color: #fff;
     cursor: pointer;
-    transition: background-color 0.3s, opacity 0.3s; }
+    transition: background-color 0.3s; }
     .contact-with-us__btn:hover, .contact-with-us__btn:focus {
-      background-color: #ff5654; }
+      opacity: 0.7; }
     .contact-with-us__btn:active {
       opacity: 0.6; }
+    .contact-with-us__btn:hover, .contact-with-us__btn:focus {
+      background-color: #ff5654; }
 
 .address__company {
   font-weight: bold; }
@@ -313,8 +319,7 @@ i {
 .address__link {
   text-decoration: none;
   color: #848789;
-  font-style: italic;
-  transition: opacity 0.3s; }
+  font-style: italic; }
   .address__link:hover, .address__link:focus {
     opacity: 0.7; }
   .address__link:active {
@@ -329,20 +334,17 @@ i {
   .author__by {
     color: #848789;
     margin-right: 10px; }
-  .author__link {
-    transition: opacity 0.3s; }
-    .author__link:hover, .author__link:focus {
-      opacity: 0.7; }
-    .author__link:active {
-      opacity: 0.6; }
+  .author__link:hover, .author__link:focus {
+    opacity: 0.7; }
+  .author__link:active {
+    opacity: 0.6; }
   .author__link-image {
     width: 55px; }
 
 .social-icons {
   display: flex; }
   .social-icons__link {
-    margin-right: 15px;
-    transition: opacity 0.3s; }
+    margin-right: 15px; }
     .social-icons__link:last-child {
       margin-right: 0; }
     .social-icons__link:hover, .social-icons__link:focus {
@@ -391,7 +393,7 @@ i {
     height: 40px;
     cursor: pointer;
     z-index: 2;
-    transition: transform 0.3s, opacity 0.3s; }
+    transition: transform 0.3s; }
     .hamburg-menu:hover, .hamburg-menu:focus {
       opacity: 0.7; }
     .hamburg-menu:active {
@@ -418,9 +420,15 @@ i {
     visibility: hidden;
     background-color: #fff;
     opacity: 0;
-    transition: opacity 0.3s, visibility 0.3s;
+    transition: visibility 0.3s;
     z-index: 1;
     padding: 35px 20px; }
+    .menu:hover, .menu:focus {
+      opacity: 0.7; }
+    .menu:active {
+      opacity: 0.6; }
+    .menu:active {
+      opacity: 0.6; }
     .menu__link {
       margin: 20px 0; }
       .menu__link:after {
